--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.forgerock</groupId>
+    <groupId>org.forgerock.ce</groupId>
     <artifactId>forgerock-parent</artifactId>
     <version>1.2.0</version>
   </parent>
-  <groupId>org.forgerock.commons</groupId>
+  <groupId>org.forgerock.ce.commons</groupId>
   <artifactId>i18n-framework</artifactId>
   <version>1.4.1</version>
   <name>ForgeRock I18N Framework</name>
@@ -132,20 +132,12 @@
   </dependencies>
   <repositories>
     <repository>
-      <id>forgerock-staging-repository</id>
-      <name>ForgeRock Release Repository</name>
-      <url>http://maven.forgerock.org/repo/releases</url>
+      <id>forgerock-community-repository</id>
+      <name>ForgeRock Community Repository</name>
+      <url>http://maven.forgerock.org/repo/community</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
-    </repository>
-    <repository>
-      <id>forgerock-snapshots-repository</id>
-      <name>ForgeRock Snapshot Repository</name>
-      <url>http://maven.forgerock.org/repo/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
     </repository>
   </repositories>
 </project>
